Settings: Add AICP entry into device info
Author: Harry Youd <harry@harryyoud.co.uk>
Date:   Fri Nov 24 09:49:51 2017 -0800

    Settings: Add LineageOS version, API level and build date to device info

    Change-Id: I4acf834442712954f8e9db15370bffafd4547174

Author: Tobias Tefke <tobias.tefke@tutanota.com>
Date:   Wed Jun 13 11:27:22 2018 +0200

    [1/2] Add vendor security patch level to device info

    Change-Id: I523fcce65cc4155591c12ea1ac04807ebfc5c716

Change-Id: I8d4c6869f8dfa34a96567bec18f9f8276b66a64e

--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -36,6 +36,14 @@
         settings:enableCopying="true"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.FirmwareVersionDetailPreferenceController"/>
 
+    <!-- AICP version -->
+    <Preference
+        android:key="aicp_version"
+        android:title="@string/aicp_version_title"
+        android:summary="@string/summary_placeholder"
+        settings:enableCopying="false"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.AicpVersionPreferenceController"/>
+
     <!-- Security patch -->
     <Preference
         android:key="security_key"
