--- a/res/values/aicp_strings.xml
+++ b/res/values/aicp_strings.xml
@@ -44,7 +44,7 @@
     <string name="battery_stats_message">Battery history stats are going to be reset</string>
 
     <string name="aicp_version_title">AICP Experience</string>
-    <string name="aicp_version_summary">Aicp 10 Edition - 15.0</string>
+    <string name="aicp_version_summary">AICP 10 Edition - 15.0</string>
     <string name="aicpextras_title">AICP Extras</string>
     <string name="aicpextras_summary">ROM customization</string>
 
